# progenitor

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  checkpoint-score-196.npy  pyproject.toml  submit-job.sh
crates/progenitor/: Cargo.toml
crates/progenitor/examples/: builders-benchmark.rs  map-elites.rs  measure-hive-benchmark.rs  measure-rainfall-benchmark.rs  pairs-search.rs  tumbler-search.rs  turing-search.rs
crates/progenitor/examples/map-elites/: features.rs  main.rs  taskstream.rs
crates/progenitor/examples/random-search/: main.rs
crates/progenitor/src/: axial_tile.rs  bit_particles.rs  blobs.rs  builders.rs  ca.rs  coords.rs  falling_sand.rs  falling_sand_v2.rs  growth.rs  hexgrid_view.rs  hexmap.rs  hive.rs  independent_pairs.rs  lib.rs  pairs.rs  potts.rs  probabilities.rs  rainfall.rs  rules.rs  simulation.rs  sunburn.rs  tile.rs  tiled.rs  torus_tile.rs  tumbler.rs  tumblers.rs  turing.rs  world1.rs
crates/progenitor/src/builders/: builder_agent.rs  nn.rs  normalization.rs  optimized_params.rs  stats.rs  wall_sim.rs  worldgen.rs
crates/progenitor/src/hive/: hive_map.rs
crates/progenitor/src/rainfall/: rainfall_map.rs  symmetric_rule.rs  vapour.rs
crates/progenitor/src/sim1/: cell.rs  mod.rs  rules.rs
crates/progenitor/src/sim2/: mod.rs
crates/progenitor/src/sunburn/: mod.rs  sunburn.rs  world.rs
crates/progenitor/src/turing_drawings/: mod.rs  turing1.rs  turing2.rs
crates/progenitor/tests/: integration_test.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/examples/: tumbler-search.py
crates/python/progenitor/: __init__.py
crates/python/src/: builders.rs  lib.rs  tumblers.rs  world.rs
crates/utils/: Cargo.toml
crates/utils/src/: features.rs  lib.rs  taskstream.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  sim1.rs  sim2.rs  sim23.rs  simulation.rs
examples/: find_lut_filter.py  random-search.rs  test.py  test2.py
examples/random-search/: features.rs  main.rs
maps/: simple-4x4.tsx  testmap.tmj
progenitor/: __init__.py  cells.py
py/: builders-optimize.py  builders_common.py  builders_copy_best_result.py  builders_optimize.py  builders_trainable.py  ribs_search.py  ribs_search_hparams.py  ribs_task.py  ribs_trainable.py  test.py  tumbler_search.py
src/: cell.rs  coords.rs  lib.rs  py_wrap.rs  rules.rs  tile.rs  wasm_wrap.rs  world1.rs
tests/: integration_test.rs
webapp/: .prettierrc  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.ts  webpack.config.js
webapp/src/: App.svelte  ArchiveGrid.svelte  ArchivePlot.svelte  Container.svelte  MapElites.svelte  MapSelector.svelte  MultipleSimulations.svelte  RuleSelector.svelte  Sidebar.svelte  Simulation.svelte  SimulationPlayer.svelte  archive.ts  bootstrap.js  global.scss  main.ts  math.ts  progenitor_wasm_init.ts  render.ts  simulation.ts  worker.ts
www/: LICENSE  README.md  global.css  index.html  index.js  index.ts  main.css  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/public/: index.html
www/src/: App.svelte  MapSelector.svelte  RuleSelector.svelte  Sidebar.svelte  Simulation.svelte  bootstrap.js  global.scss  main.ts  simulation.ts
