[tool.poetry]
name = "progenitor-experiments"
version = "0.0.0"
description = "Experiment of the day, using the compiled progenitor rust module"
authors = ["Martin Renold <martin@log2.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
maturin = "^1.1.0"
# progenitor = {path = "target/wheels/progenitor-0.1.0-cp310-cp310-linux_x86_64.whl"}
ribs = {extras = ["all"], version = "^0.5.2"}
cma = "^3.2.2"
# ray = {extras = ["default", "tune"], version = "^2.4.0"}  # Ray 2.4 doesn't work with Python >= 3.11
ray = {extras = ["tune"], version = "^2.6.1"}
llvmlite = "^0.40.1"
numba = "^0.57.1"
numpy = "1.24.4"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
cmaes = "^0.10.0"

[tool.poetry.group.dev.dependencies]
tensorboard = "^2.13.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
