[package]
name = "progenitor"
description = "rule-based growth experiment with hexagonal cells"
version = "0.1.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor"
crate-type = ["rlib"]

[dependencies]
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
getrandom = { version = "0.2", features = ["js"] }

# indexmap = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex2d = "1.1"

[dev-dependencies]
rayon = "1.5"
crossbeam = "0.8"
