[package]
name = "progenitor"
description = "rule-based growth experiment with hexagonal cells"
version = "0.1.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor"
crate-type = ["rlib"]

[dependencies]
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# indexmap = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex2d = "1.1"
nalgebra = { version = "0.32", features = ["default", "rand", "serde-serialize"] }
serde-big-array = "0.5.1"
num-traits = "0.2"
num-derive = "0.4"

[dev-dependencies]
rayon = "1.5"
num_cpus = "1.13"
utils = { path = "../utils" }
indicatif = { version = "0.17.7", features = ["rayon"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# those are a bit pedantic (some of them even hurt readability, IMO)
new_without_default = "allow"
match_like_matches_macro = "allow"
manual_range_patterns = "allow"
collapsible_if = "allow"
let_and_return = "allow"
identity_op = "allow"  # I'll multiply by one whenever I like!
