[package]
name = "progenitor"
description = "rule-based growth experiment with hexagonal cells"
version = "0.1.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor"
crate-type = ["rlib"]

[dependencies]
rand = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
rand_distr = "0.5.1"

# indexmap = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex2d = "1.1"
nalgebra = { version = "0.33", features = ["default", "serde-serialize"] }
serde-big-array = "0.5.1"
num-traits = "0.2"
num-derive = "0.4"

[dev-dependencies]
rayon = "1.5"
num_cpus = "1.13"
utils = { path = "../utils" }
indicatif = { version = "0.17.7", features = ["rayon"] }

[lints.rust]
unsafe_code = "forbid"
dead_code = "allow"  # useful, except when prototyping different variants of a feature

[lints.clippy]
# Those are a bit pedantic. Some even hurt readability, IMO. Others are simply
# not important enough to fix them multiple times during prototying.
new_without_default = "allow"
match_like_matches_macro = "allow"
manual_range_patterns = "allow"
comparison_chain = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
let_and_return = "allow"
identity_op = "allow"  # I'll multiply by one whenever I like!
# Just disable all style hints?
# style = "allow"
