[package]
name = "progenitor-py"
description = "rule-based growth experiment with hexagonal cells"
version = "0.0.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2021"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor"
crate-type = ["cdylib"]

[dependencies]
progenitor = { path = "../progenitor" }
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

pyo3 = { version = "0.15", features = ["extension-module"] }
numpy = { version = "0.15" }
ndarray = { version = "0.15" }

[package.metadata.maturin]
requires-dist = ["numpy~=1.17"]

#[package.metadata.maturin.scripts]
#get_42 = "my_project:DummyClass.get_42"


