[package]
name = "progenitor-py"
description = "rule-based growth experiment with hexagonal cells"
version = "0.0.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2021"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor"
crate-type = ["cdylib"]
doc = false

[dependencies]
progenitor = { path = "../progenitor" }
rand = "0.9"
rayon = "1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
