[project]
# workaround: maximum numpy version currently required by numba
dependencies = ["numpy==1.20.3", "ribs"]
name = "progenitor"
version = "0.1.0"
description = "test"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
# bindings = "cffi"
compatibility = "linux"  # do we need/want this? (or is manylinux/default what we want)
