[project]
dependencies = ["numpy>=1.21", "scipy>=1.8", "cma>=3.2"]

# workaround: maximum numpy version currently required by numba
#dependencies = ["numpy==1.20.3", "ribs"]

name = "progenitor"
version = "0.1.0"
description = "test"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
# bindings = "cffi"
compatibility = "linux"  # do we need/want this? (or is manylinux/default what we want)
