[package]
name = "progenitor-wasm"
description = "rule-based growth experiment with hexagonal cells"
version = "0.0.0"
authors = ["Martin Renold <martin@log2.ch>"]
edition = "2024"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/martinxyz/progenitor"

[lib]
name = "progenitor_wasm"
crate-type = ["cdylib"]
doc = false

[dependencies]
progenitor = { path = "../progenitor" }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.33", features = [] }
serde_json = "1.0"
bincode = "1.3"
hex2d = "1.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
# web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

console_error_panic_hook = { version = "0.1" }
